# AltKit

./: .gitignore  CMakeLists.txt  Package.swift  README.md
.github/: CODEOWNERS  FUNDING.yml  auto_assign.yml  issue_template.md
.github/workflows/: create-release.yml  pr_comment_build_artifcats.yml  test.yml
Sources/CSideKit/: NSError+ALTServerError.h  module.modulemap
Sources/SideKit/: ALTServerConnectionError.swift  ALTServerError.swift
Sources/SideKit/Errors/: ALTServerConnectionError+NSError.swift  ALTServerConnectionError.swift  ALTServerError+NSError.swift  ALTServerError.swift
Sources/SideKit/Extensions/: ALTServerError+Conveniences.swift  Result+Conveniences.swift
Sources/SideKit/Server/: Connection.swift  NetworkConnection.swift  Server.swift  ServerConnection.swift  ServerManager.swift  ServerProtocol.swift
Sources/SideKit/Types/: CodableServerError.swift
Tests/SideKitTests/: SideKitTests.swift
